src/objects/OCIO_Ethics_Expense_and_Payment_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Amount_of_Payment__c</fullName>
        <label>Amount of Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ethics_Form__c</fullName>
        <label>Ethics Form</label>
        <referenceTo>OCIO_Ethics_Form__c</referenceTo>
        <relationshipName>Expenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Method_of_Payment__c</fullName>
        <label>Method of Payment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>In-kind</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nature_of_Expense__c</fullName>
        <label>Nature of Expense</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conference Fee</fullName>
                </value>
                <value>
                    <fullName>Lodging</fullName>
                </value>
                <value>
                    <fullName>Meals</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Registration Fee</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <label>Expense and Payment Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Expense Detail {000}</displayFormat>
        <label>Expense and Payment Detail</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense and Payment Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>